--- a/pom.xml
+++ b/pom.xml
@@ -8,5 +8,47 @@
     <artifactId>thread</artifactId>
     <version>1.0-SNAPSHOT</version>
 
+    <profiles>
+        <profile>
+            <id>dev</id>
+            <properties>
+                <db.url>123</db.url>
+            </properties>
+            <activation>
+                <activeByDefault>true</activeByDefault>
+                <jdk>[1.6,)</jdk>
+            </activation>
+        </profile>
+        <profile>
+            <id>QA</id>
+            <properties>
+                <qa.db.url>325</qa.db.url>
+            </properties>
+            <activation>
+                <activeByDefault>false</activeByDefault>
+            </activation>
+        </profile>
+    </profiles>
+
+    <build>
+        <resources>
+            <!--开启主资源过滤-->
+            <resource>
+                <directory>
+                    src/main/resources
+                </directory>
+                <filtering>true</filtering>
+            </resource>
+        </resources>
+        <testResources>
+            <!--开启测试资源配置-->
+            <testResource>
+                <directory>
+                    src/test/resources
+                </directory>
+                <filtering>true</filtering>
+            </testResource>
+        </testResources>
+    </build>
 
 </project>
